# llmtool

./: Cargo.toml  README.md
.cargo/: config.toml
src/: cache.rs  cmd_batch_query.rs  cmd_cache_server.rs  cmd_single_request.rs  main.rs  openai_client.rs  utils.rs
src/schema/: json-array-of-arrays.json  json-array-of-objects.json  json-array-of-strings.json
src/test-data/: test-reply-01.json
